--- a/assets/scss/components/_speakers.scss
+++ b/assets/scss/components/_speakers.scss
@@ -57,7 +57,7 @@
             color: var(--font-color);
 
             .image-wrapper {
-                box-shadow: 0 0.5rem 0 var(--current-color-400);
+                box-shadow: 0 0.7rem 0 var(--current-color-400);
             }
 
             .image {
